[gd_scene load_steps=7 format=3 uid="uid://basylnlu0egbf"]

[ext_resource type="Script" path="res://scene/instruction/BlockControl/ColorInstruction.gd" id="1_b5pu2"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_htcid"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_gkn7r"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_wtio2"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_nlfbs"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_xaqec"]

[node name="ColorInstruction" type="Panel"]
script = ExtResource("1_b5pu2")

[node name="BaseRow" parent="." instance=ExtResource("2_htcid")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 1
grow_vertical = 1

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_gkn7r")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Control"
script = ExtResource("4_wtio2")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_nlfbs")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "set color of "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_xaqec")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "to"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_xaqec")]
